# DocGenie

./: .coverage  .docgenie.example.yml  .docgenie.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION_GUIDE.md  DOGFOOD_EXAMPLE.md  GUIDE.md  HOW_TO_RUN_DOCGENIE.md  HTML_DOCUMENTATION_GUIDE.md  HTML_SYSTEM_OVERVIEW.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TEST_RESULTS.md  convert_to_html.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
ERRORS/: 10_test (macos-latest, 3.10).txt  10_test (macos-latest, 3.12).txt  11_test (macos-latest, 3.11).txt  11_test (ubuntu-latest, 3.10).txt  12_test (ubuntu-latest, 3.12).txt  12_test (windows-latest, 3.11).txt  1_test (macos-latest, 3.13).txt  1_test (windows-latest, 3.10).txt  2_test (ubuntu-latest, 3.10).txt  2_test (windows-latest, 3.13).txt  3_test (ubuntu-latest, 3.13).txt  3_test (windows-latest, 3.10).txt  4_test (windows-latest, 3.12).txt  4_test (windows-latest, 3.13).txt  5_test (macos-latest, 3.10).txt  5_test (ubuntu-latest, 3.11).txt  6_test (macos-latest, 3.12).txt  6_test (ubuntu-latest, 3.13).txt  7_test (ubuntu-latest, 3.12).txt  7_test (windows-latest, 3.12).txt  8_test (ubuntu-latest, 3.11).txt  8_test (windows-latest, 3.11).txt  9_test (macos-latest, 3.11).txt  9_test (macos-latest, 3.13).txt
docgenie/: __init__.py  cli.py  config.py  core.py  generator.py  html_generator.py  parsers.py  utils.py
docgenie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: changelog.md  contributing.md  docs.html  index.md
docs/advanced/: performance.md  plugins.md  security.md
docs/api/: cli.md  core.md  generators.md  parsers.md  utils.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: api.md  cli.md  customization.md  formats.md
examples/demo_library/: .docgenie.yaml  README.md  cli.py  docs.html  requirements.txt
examples/polyglot_test/: README.md  UserManager.java  UserService.cs  enhanced_docs.html  final_docs.html  main.go  main.py  types.ts  utils.js
examples/sample_project/: docs.html  main.py  requirements.txt  utils.py
examples/sample_website/: README.md  docs.html  index.html  script.js  style.css
scripts/: dogfood.py  run_demo.py
src/docgenie/: __init__.py  __main__.py  cli.py  config.py  convert_to_html.py  core.py  diff_engine.py  exceptions.py  generator.py  html_generator.py  html_sections.py  index_store.py  logging.py  models.py  output_links.py  parsers.py  pr_summary.py  readme_gate.py  readme_quality.py  redaction.py  review_engine.py  sanitize.py  utils.py
tests/: conftest.py
tests/integration/: conftest.py  test_cli.py  test_cli_additional.py  test_module_entrypoint.py
tests/unit/: test_config.py  test_convert_to_html.py  test_core.py  test_core_additional.py  test_diff_engine.py  test_exceptions.py  test_generator.py  test_generator_additional.py  test_html_generator.py  test_html_logging_models_entrypoints.py  test_html_sections_snapshot.py  test_index_store.py  test_logging.py  test_models.py  (+11 more)
typings/: toml.pyi
(+10 files in other folders)
